# openclassrooms-projet-12

./: .coveragerc  .flake8  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/commands/: __init__.py  cli.py  client.py  contract.py  event.py  gestion_commands.py  user.py  user_commands.py
app/commands/commercial/: __init__.py  client.py
app/commands/gestion/: __init__.py  contract.py  contract_commands.py  user.py  user_commands.py
app/controllers/: __init__.py  cli.py  client.py  contract.py  event.py  user.py
app/database/: db.py
app/models/: __init__.py  client.py  contract.py  date_tracked.py  department.py  event.py  user.py
app/services/: auth_service.py  command_router.py  initialization.py  menu_service.py
app/tests/: conftest.py  test_client.py  test_date_tracked.py  test_db.py  test_department.py  test_employee.py  test_user.py
app/tests/commands/: test_cli_commands.py  test_client_commands.py  test_contract_commands.py  test_event_commands.py  test_user_commands.py
app/tests/database/: test_db.py
app/tests/models/: test_contract_model.py  test_department.py  test_event.py  test_user.py
app/tests/services/: test_auth_service.py  test_command_router.py  test_initialization.py  test_menu_service.py
app/tests/views/: test_client_view.py  test_contract_view.py  test_event_view.py  test_menu_view.py  test_user_view.py
app/utils/: constants.py  validators.py
app/views/: client.py  contract.py  contract_view.py  event.py  menu.py  user.py
