[tool.poetry]
name = "openclassrooms-projet-12"
version = "0.1.0"
description = ""
authors = ["devexplorer <contact@devexplorer.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.43"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
argon2-cffi = "^25.1.0"
rich = "^14.1.0"
click = "^8.2.1"
rich-click = "^1.8.9"
sentry-sdk = "^2.43.0"
jwt = "^1.4.0"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
